# modular

./: README.md  SubjectsData_Schaefer400.csv  __init__.py  config.yaml  io.py  pyproject.toml  report_qc_final.csv  run_qc_pipeline.py
fmri_features/: __init__.py  connectome_generator.py  data_loader.py  feature_extractor.py
qc_bold/: io.py  multivariate.py  report.py  univariate.py
scripts/: debug_collinearity.py  debug_single_subject.py  run_connectivity_pipeline.py  run_qc_pipeline.py
